--- a/Final Project/Report/sources.bib
+++ b/Final Project/Report/sources.bib
@@ -1,8 +1,23 @@
+@article{Avouac2015,
+abstract = {Understanding the partitioning of seismic and aseismic fault slip is central to seismotectonics as it ultimately determines the seismic potential of faults. Thanks to advances in tectonic geodesy, it is now possible to develop kinematic models of the spatiotemporal evolution of slip over the seismic cycle and to determine the budget of seismic and aseismic slip. Studies of subduction zones and continental faults have shown that aseismic creep is common and sometimes prevalent within the seismogenic depth range. Interseismic coupling is generally observed to be spatially heterogeneous, defining locked patches of stress accumulation, to be released in future earthquakes or aseismic transients, surrounded by creeping areas. Clay-rich tectonites, high temperature, and elevated pore-fluid pressure seem to be key factors promoting aseismic creep. The generally logarithmic time evolution of afterslip is a distinctive feature of creeping faults that suggests a logarithmic dependency of fault friction on slip rate...},
+author = {Avouac, Jean-Philippe},
+doi = {10.1146/annurev-earth-060614-105302},
+file = {:Users/rflee/Library/Application Support/Mendeley Desktop/Downloaded/Avouac - 2015 - From Geodetic Imaging of Seismic and Aseismic Fault Slip to Dynamic Modeling of the Seismic Cycle(2).pdf:pdf},
+issn = {0084-6597},
+journal = {Annual Review of Earth and Planetary Sciences},
+keywords = {aseismic creep,asperities,earthquake,seismic and interseismic coupling},
+number = {1},
+pages = {150223150959000},
+title = {{From Geodetic Imaging of Seismic and Aseismic Fault Slip to Dynamic Modeling of the Seismic Cycle}},
+url = {http://www.annualreviews.org/doi/abs/10.1146/annurev-earth-060614-105302},
+volume = {43},
+year = {2015}
+}
 @article{Goldfinger2013,
 abstract = {The recent 2011 Mw 9.0 Tohoku, Japan, and the 2004 Mw 9.15 Sumatra–Andaman superquakes have humbled many in earthquake research. Neither region was thought capable of earthquakes exceeding Mw ∼ 8:4. Appealing proposed relationships to predict the size of earthquakes in subduction zones, such as that between earthquake magnitude and parameters such as lower plate age and convergence rate (Ruff and Kanamori, 1980) and plate coupling based on anchored slabs (Scholz and Campos, 1995), at least have many exceptions and may not be valid. Both earthquakes occurred where the subducting plate edge was quite old, ∼50–130 Ma. The role of thick sediments smoothing the plate interface and maximizing rupture area has been considered a contributing factor, and it seems to influence many recent great earthquakes (Ruff, 1989). The Tohoku event is also contrary to this hypothesis. Clearly, much remains to be learned about these great events, so much so that most previous estimates of maximum earthquake size in subduction plate boundaries should be considered suspect, and perhaps other fault systems as well (McCaffrey, 2007, 2008).  Our perspective on this issue is clearly hampered by short historical and even shorter instrumental records. The examples noted earlier indicate that basing estimations of maximum earthquake size or models of earthquake recurrence on such short-term records alone clearly cannot encompass the range of fault behavior, even when historical records may be {\textgreater}1000 years long as in that in Japan. Here, we present several examples of areas where long geologic and paleoseismic records can illuminate a much wider range of seismic behaviors compared with those deduced from historical and instrumental data and speculate on models of long-term fault behavior based on very long records.},
 author = {Goldfinger, C. and Ikeda, Y. and Yeats, Robert S. and Ren, J.},
 doi = {10.1785/0220110135},
-file = {:Users/rflee/sonichome/Documents/papers/superquakes.pdf:pdf},
+file = {:Users/rflee/Library/Application Support/Mendeley Desktop/Downloaded/Goldfinger et al. - 2013 - Superquakes and Supercycles.pdf:pdf},
 isbn = {0895-0695},
 issn = {0895-0695},
 journal = {Seismological Research Letters},
@@ -29,18 +44,6 @@ url = {http://www.nature.com/doifinder/10.1038/ngeo2427},
 volume = {8},
 year = {2015}
 }
-@article{Nocquet2016,
-author = {Nocquet, J.-M. and Jarrin, P. and Vall{\'{e}}e, M. and Mothes, P. A. and Grandin, R. and Rolandone, F. and Delouis, B. and Yepes, H. and Font, Y. and Fuentes, D. and R{\'{e}}gnier, M. and Laurendeau, A. and Cisneros, D. and Hernandez, S. and Sladen, A. and Singaucho, J.-C. and Mora, H. and Gomez, J. and Montes, L. and Charvis, P.},
-doi = {10.1038/ngeo2864},
-file = {:Users/rflee/Library/Application Support/Mendeley Desktop/Downloaded/Nocquet et al. - 2016 - Supercycle at the Ecuadorian subduction zone revealed after the 2016 Pedernales earthquake.pdf:pdf},
-issn = {1752-0894},
-journal = {Nature Geoscience},
-number = {February},
-title = {{Supercycle at the Ecuadorian subduction zone revealed after the 2016 Pedernales earthquake}},
-url = {http://www.nature.com/doifinder/10.1038/ngeo2864},
-volume = {10},
-year = {2016}
-}
 @article{Mendoza1984,
 abstract = {We have relocated earthquakes with Joint Hypocenter Determination in order to examine the nature of fault heterogeneities that controlled northward propagation of plate-boundary rupture from the source region of the earthquake of 14 May 1942, to the source region of the 19 January 1958 earthquake, and eventually to the source region of the earthquake of 12 December 1979. The entire region had previously ruptured in the earthquake of 1906. The relocated hypocenters lie on the same plane to within the approximately 20-km uncertainty of the focal depths. Also, the main shocks nucleated at nearly the same distance from the Colombia Trench. These observations suggest that the heterogeneities between the 1942 and 1958 ruptures and between the 1958 and 1979 ruptures do not correspond to a major distortion of the downgoing slab but rather to either minor distortions of the slab or to regions of high friction or low available strain energy on a continuous fault surface. In particular, the heterogeneity between the 1958 and 1979 rupture zones seems to have been a high-strength barrier with dimensions much smaller than the dimensions of either of the rupture zones. The 1942 and 1958 earthquakes had source dimensions no larger than the 1979 main shock, but they had stronger aftershocks.This suggests that the arrest of earthquake rupture in 1979 left the plate boundary segment that had ruptured in 1906 in a state of lower stress than after the 1942 and 1958 earthquakes. Long-term seismicity in the decades preceding the 1979 earthquake occurred mostly outside or on the boundaries of the rupture area defined by the distribution of 1979 aftershocks. The intense aftershocks in 1958 within tens of kilometers of the eventual 1979 hypocenter may correspond to a long-term precursory seismic swarm for the 1979 earthquake.--Modified journal abstract.},
 author = {Mendoza, C and Dewey, J W},
@@ -53,4 +56,16 @@ pages = {577--593},
 title = {{Seismicity associated with the great Colombia-Ecuador earthquakes of 1942, 1958 and 1979: implications for barrier models of earthquake rupture}},
 volume = {74},
 year = {1984}
+}
+@article{Nocquet2016,
+author = {Nocquet, J.-M. and Jarrin, P. and Vall{\'{e}}e, M. and Mothes, P. A. and Grandin, R. and Rolandone, F. and Delouis, B. and Yepes, H. and Font, Y. and Fuentes, D. and R{\'{e}}gnier, M. and Laurendeau, A. and Cisneros, D. and Hernandez, S. and Sladen, A. and Singaucho, J.-C. and Mora, H. and Gomez, J. and Montes, L. and Charvis, P.},
+doi = {10.1038/ngeo2864},
+file = {:Users/rflee/Library/Application Support/Mendeley Desktop/Downloaded/Nocquet et al. - 2016 - Supercycle at the Ecuadorian subduction zone revealed after the 2016 Pedernales earthquake.pdf:pdf},
+issn = {1752-0894},
+journal = {Nature Geoscience},
+number = {February},
+title = {{Supercycle at the Ecuadorian subduction zone revealed after the 2016 Pedernales earthquake}},
+url = {http://www.nature.com/doifinder/10.1038/ngeo2864},
+volume = {10},
+year = {2016}
 }
